--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 tests/micro-benchmarks/hashbench/bin-no-simd/
 tests/micro-benchmarks/hashbench/bin-simd/
 tests/micro-benchmarks/hashbench/results/
+deps/
