Add new tests for hash functions

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .vscode/
 tests/micro-benchmarks/hashbench/bin-no-simd/
 tests/micro-benchmarks/hashbench/bin-simd/
-tests/micro-benchmarks/hashbench/obj-dump/
-tests/micro-benchmarks/hashbench/results/
+tests/micro-benchmarks/hashbench/obj-dump*
+tests/micro-benchmarks/hashbench/results*
+tests/micro-benchmarks/outputhashbench_ebpf/
 deps/
