--- a/tests/micro-benchmarks/prandom_u32/dpdk/Makefile
+++ b/tests/micro-benchmarks/prandom_u32/dpdk/Makefile
@@ -9,6 +9,9 @@ APP2 = rand_rate_tausworthe
 SRCSAPP1-y := rand_rate_sip.c
 SRCSAPP2-y := rand_rate_tausworthe.c
 
+SRCSAPP1-mem-y := rand_rate_sip_from_mem.c
+SRCSAPP2-mem-y := rand_rate_tausworthe_from_mem.c
+
 PKGCONF ?= pkg-config
 
 # Build using pkg-config variables if possible
@@ -20,6 +23,7 @@ all: clean static
 .PHONY: static
 static: build/$(APP1) build/$(APP2)
 test: clean build/$(APP1)-test build/$(APP2)-test
+test-mem: clean build/$(APP1)-test-mem build/$(APP2)-test-mem
 
 PC_FILE := $(shell $(PKGCONF) --path libdpdk 2>/dev/null)
 CFLAGS += -O3 $(shell $(PKGCONF) --cflags libdpdk)
@@ -39,6 +43,12 @@ build/$(APP1)-test: $(SRCSAPP1-y) Makefile $(PC_FILE) | build
 
 build/$(APP2)-test: $(SRCSAPP2-y) Makefile $(PC_FILE) | build
 	$(foreach number,$(NUMBERS),$(CC) $(CFLAGS) -D_NUM_RAND_CYCLES=$(number) $(SRCSAPP2-y) -o build/$(APP2)_$(number) $(LDFLAGS) $(LDFLAGS_STATIC);)
+
+build/$(APP1)-test-mem: $(SRCSAPP1-mem-y) Makefile $(PC_FILE) | build
+	$(foreach number,$(NUMBERS),$(CC) $(CFLAGS) -D_NUM_RAND_CYCLES=$(number) $(SRCSAPP1-mem-y) -o build/$(APP1)_mem_$(number) $(LDFLAGS) $(LDFLAGS_STATIC);)
+
+build/$(APP2)-test-mem: $(SRCSAPP2-mem-y) Makefile $(PC_FILE) | build
+	$(foreach number,$(NUMBERS),$(CC) $(CFLAGS) -D_NUM_RAND_CYCLES=$(number) $(SRCSAPP2-mem-y) -o build/$(APP2)_mem_$(number) $(LDFLAGS) $(LDFLAGS_STATIC);)
 
 build:
 	@mkdir -p $@
