--- a/.github/workflows/build-deps.yml
+++ b/.github/workflows/build-deps.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-18.04, ubuntu-20.04, ubuntu-latest]
+        os: [ubuntu-20.04, ubuntu-latest]
 
     steps:
     - uses: actions/checkout@v2
