--- a/.github/workflows/test-sketches.yml
+++ b/.github/workflows/test-sketches.yml
@@ -23,6 +23,13 @@ jobs:
       run: |
         chmod +x "${GITHUB_WORKSPACE}/install-requirements.sh"
         ${GITHUB_WORKSPACE}/install-requirements.sh
+    - name: set up python
+        uses: actions/setup-python@v1
+        with:
+          python-version: '3.9'
+      - name: install Python dependencies
+        run: |
+          pip3 install -r ${GITHUB_WORKSPACE}/requirements.txt
     - name: Test count-sketch
       run: |
         sudo timeout --preserve-status -s SIGINT 30 sudo python3 ${GITHUB_WORKSPACE}/count_sketch.py -i lo -m NATIVE -a DROP
