--- a/.github/workflows/test-sketches.yml
+++ b/.github/workflows/test-sketches.yml
@@ -29,7 +29,7 @@ jobs:
         python-version: '3.9'
     - name: install Python dependencies
       run: |
-        pip3 install -r ${GITHUB_WORKSPACE}/requirements.txt
+        sudo python3 -m pip install -r ${GITHUB_WORKSPACE}/requirements.txt --user
     - name: Test count-sketch
       run: |
         sudo timeout --preserve-status -s SIGINT 30 sudo python3 ${GITHUB_WORKSPACE}/count_sketch.py -i lo -m NATIVE -a DROP
