--- a/.github/workflows/test-sketches.yml
+++ b/.github/workflows/test-sketches.yml
@@ -12,22 +12,23 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-20.04, ubuntu-latest]
-    container:
-      image: sebymiano/ebpf-sketches:latest
-      options: --privileged --pid=host
-      volumes:
-        - /sys/kernel/debug:/sys/kernel/debug:rw
-        - /lib/modules:/lib/modules:ro
-        - /usr/src:/usr/src:ro
-        - /usr/include/linux:/usr/include/linux:ro
     steps:
       - name: System info
         run: |
           uname -a
-      - name: List files
+          ip addr
+      - name: Pull docker container
         run: |
-          ls
+          docker pull sebymiano/ebpf-sketches:latest
       - name: Test count-sketch
-        run: |
-          sudo timeout --preserve-status -s SIGINT 30 \
-          sudo python3 count_sketch.py -i lo -m NATIVE -a DROP
+        uses: addnab/docker-run-action@v3
+        with:
+            image: sebymiano/ebpf-sketches:latest
+            options: --privileged --network=host --pid=host \
+            -v /sys/kernel/debug:/sys/kernel/debug:rw \
+            -v /lib/modules:/lib/modules:ro \
+            -v /usr/src:/usr/src:ro \
+            -v /usr/include/linux:/usr/include/linux:ro
+            run: |
+                sudo timeout --preserve-status -s SIGINT 30 \
+                sudo python3 count_sketch.py -i lo -m NATIVE -a DROP
