--- a/.github/workflows/test-sketches.yml
+++ b/.github/workflows/test-sketches.yml
@@ -24,11 +24,7 @@ jobs:
         uses: addnab/docker-run-action@v3
         with:
             image: sebymiano/ebpf-sketches:latest
-            options: --privileged --network=host --pid=host \
-            -v /sys/kernel/debug:/sys/kernel/debug:rw \
-            -v /lib/modules:/lib/modules:ro \
-            -v /usr/src:/usr/src:ro \
-            -v /usr/include/linux:/usr/include/linux:ro
+            options: --privileged --network=host --pid=host -v /sys/kernel/debug:/sys/kernel/debug:rw -v /lib/modules:/lib/modules:ro -v /usr/src:/usr/src:ro -v /usr/include/linux:/usr/include/linux:ro
             run: |
                 sudo timeout --preserve-status -s SIGINT 30 \
                 sudo python3 count_sketch.py -i lo -m NATIVE -a DROP
